# ragent

./: .env-template  .gitignore  AGENTS.md  GEMINI.md  LICENSE  Makefile  README.md  index.html  pyproject.toml  run_eval.sh  train.py
configs/: endpoints.py
data/nampdn_ai_devdocs_io/: qas.json
environments/: run_eval.sh
environments/bm25/: .env-template  README.md  bm25.py  pyproject.toml
environments/bm25_search/: README.md  bm25_search.py  pyproject.toml
environments/bm25_search/.prime/: .env-metadata.json
environments/test_env/: README.md  pyproject.toml
ragent/config/: __init__.py  endpoints.py  train.py
ragent/data/pipelines/: __init__.py
ragent/data/pipelines/nampdn_ai_devdocs_io/: __init__.py  utils.py
ragent/data/prompts/: search_engine.py
ragent/data/sources/bm25s/: __init__.py
ragent/environments/bm25s/: __init__.py  bm25s.py
ragent/lib/: __init__.py  dataset_cleaning.py  pipeline.py
ragent/lib/bm25s/: __init__.py
ragent/lib/data/pipelines/: __init__.py
ragent/lib/data/pipelines/nampdn_ai_devdocs_io/: __init__.py
ragent/lib/data/sources/bm25s/: __init__.py
ragent/lib/data_sources/bm25s/: __init__.py
ragent/prompts/agent/: search_engine.py
ragent/prompts/judge/: qa.py
ragent/reward_funcs/: llm_judge_prompt.py
ragent/rewards/: __init__.py
ragent/utils/: __init__.py  config.py  logging.py  rewards.py
ragent_core/: bm25_client.py  cli.py  types.py
ragent_core/config/: __init__.py  endpoints.py  logging.py
ragent_core/data_sources/: __init__.py
ragent_core/data_sources/common_pile_news_filtered/: __init__.py
ragent_core/data_sources/common_pile_peps/: __init__.py
ragent_core/data_sources/common_pile_uspto_filtered/: __init__.py
ragent_core/data_sources/diegi97_ft_posts/: __init__.py
ragent_core/data_sources/diegi97_marine_biology/: __init__.py
ragent_core/data_sources/diegi97_mythology/: __init__.py
ragent_core/data_sources/diegi97_space_exploration/: __init__.py
ragent_core/data_sources/gitlab_handbook/: __init__.py  prepare.py
ragent_core/data_sources/nampdn_ai_devdocs_io/: __init__.py  utils.py
ragent_core/data_sources/owasp_cheatsheets/: __init__.py  prepare.py
ragent_core/data_sources/posthog_com/: __init__.py  prepare.py
ragent_core/data_sources/qas_from_graph/: README.md  __init__.py  config.py  entity.py  graph.py  path_collector.py  qa_builder.py  sparql_client.py  sparql_generator.py
ragent_core/data_sources/qas_from_graph/dataset_creation/: common.py  multi_thread.py  single_thread.py
ragent_core/data_sources/qas_from_graph/graph_setup/: README.md  run_virtuoso.sh
ragent_core/data_sources/rfc_all/: __init__.py
ragent_core/data_sources/rust_rfcs/: __init__.py  prepare.py
ragent_core/pipelines/: __init__.py  atomic.py  base.py  cross_concept_synthesis.py  entity_fact_qa.py  llms.py  multistep.py
ragent_core/pipelines/explorer_agent/: __init__.py  deepseek_client.py  explorer_agent.py  explorer_agent_prompts.py  gemini_client.py
ragent_core/pipelines/prompts/: atomic_prompts.py  cross_concept_prompts.py  entity_fact_prompts.py  multistep_prompts.py
ragent_core/prompts/: __init__.py
ragent_core/prompts/agent/: search_engine.py
ragent_core/retrievers/: __init__.py  base.py  bm25_retriever.py  chunking.py  hybrid_retriever.py
ragent_core/rewards/: __init__.py
ragent_core/utils/: __init__.py  rewards.py
scripts/: analyze_eval_results.py  merge_data_sources.py  merge_qa_datasets.py  prepare_curriculum_dataset.py  wiki_topic_filter.py  wiki_topic_filter_chunked.py
visualizers/: qa_pairs.html  trajectories.html
