[project]
name = "ragent-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Diego Peláez Paquico", email = "diegi97@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "bm25s>=0.2.13",
    "colorlog>=6.9.0",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sparqlwrapper>=2.0.0",
    "tyro>=0.9.28",
    "verifiers>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["ragent_core"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
