[project]
name = "bm25-search"
description = "Agentic search across multiple data sources"
tags = ["single-turn", "agentic-search", "tool-use", "web-search"]
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
    "ragent-core>=0.2.1",
    "verifiers>=0.1.9.post3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bm25_search.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
